Added basic authentication for user names. Now if 'user' attribute is not blank in the config file, the user specified will only be able to control the light.

--- a/kasa.service
+++ b/kasa.service
@@ -5,7 +5,7 @@ After=network-online.target
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/python3 "/home/derek/.Flask-Kasa/flaskkasa.py"
+ExecStart=/usr/bin/python3 "/home/derek/.flask-kasa/flaskkasa.py"
 User=derek
 Group=derek
 
